SERVER-56520 Time-series inserts spent a lot of time in wt_calc_modify but don't generate deltas